# BidirectionalGaitNet

./: .gitignore  CMakeLists.txt  README.md  install.sh  pc_build.sh
data/: env.xml  env_ankle.xml  env_merge.xml  env_skel.xml  env_template.xml  ground.xml  marker_set.xml  muscle_gaitnet.xml  skeleton_gaitnet_narrow_model.xml
data/motion/: backflip.bvh
fgn/: fgn_narrow_model_entire_01
motions/: Sim_Crouch.npz  Sim_Healthy.npz  Sim_LeftEquinus.npz  Sim_LeftFootDrop.npz  Sim_LeftTrendelen.npz  Sim_Waddling.npz
python/: CMakeLists.txt  RayEnvManager.cpp  advanced_vae.py  augument_raw_data.py  c3dTobvh.py  checkpoint_converter.py  converter_to_gvae_set.py  env.txt  forward_gaitnet.py  motion.txt  ray_config.py  ray_env.py  ray_model.py  ray_ppo.py  ray_torch_policy.py  ray_train.py  run_slurm.sh  run_slurm_single.sh  train_backward_gaitnet.py  train_forward_gaitnet.py
sim/: BVH_Parser.cpp  BVH_Parser.h  CMakeLists.txt  Character.cpp  Character.h  DARTHelper.cpp  DARTHelper.h  Environment.cpp  Environment.h  Muscle.cpp  Muscle.h  SimpleMotion.cpp  SimpleMotion.h
viewer/: C3D_Reader.cpp  C3D_Reader.h  CMakeLists.txt  GLFWApp.cpp  GLFWApp.h  GLfunctions.cpp  GLfunctions.h  ShapeRenderer.cpp  ShapeRenderer.h  main.cpp
